--- a/common/src/main/res/values/color.xml
+++ b/common/src/main/res/values/color.xml
@@ -3,4 +3,8 @@
     <color name="font_while">#ffffff</color>
     <color name="font_black">#000000</color>
     <color name="font_gray">#66333333</color>
+    <color name="bg_black">#000000</color>
+    <color name="bg_white">#ffffff</color>
+    <color name="divide_line_gray">#99333333</color>
+    <color name="bottom_bg_white">#eeffffff</color>
 </resources>
