--- a/main/src/main/res/layout/fragment_mine.xml
+++ b/main/src/main/res/layout/fragment_mine.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 <ScrollView
+    android:background="@color/bg_black"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent">
 <LinearLayout
     android:id="@+id/mine_constraint"
     android:layout_width="match_parent"
-    android:background="#000000"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
