--- a/main/src/main/res/layout/activity_main.xml
+++ b/main/src/main/res/layout/activity_main.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools">
     <androidx.drawerlayout.widget.DrawerLayout
         android:layout_width="match_parent"
+        android:id="@+id/main_draw_view"
         android:fitsSystemWindows="true"
         android:layout_height="match_parent">
 <RelativeLayout
+    android:id="@+id/main_content_id"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -17,6 +19,7 @@
         android:layout_height="?attr/actionBarSize"/>
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/main_page"
+        android:background="@color/bg_white"
         android:orientation="horizontal"
         android:layout_centerInParent="true"
         android:layout_below="@+id/main_app_bar"
