--- a/main/src/main/res/drawable/radius_rectangle.xml
+++ b/main/src/main/res/drawable/radius_rectangle.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke android:color="@color/font_gray"
+        android:width="1dp"
+        />
+    <size android:height="24dp" />
+    <corners android:radius="12dp"/>
+</shape>
