--- a/main/src/main/res/drawable/spot.xml
+++ b/main/src/main/res/drawable/spot.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item android:state_checked="true">
+        <shape>
+            <size android:height="10dp" android:width="10dp"/>
+            <corners android:radius="5dp"/>
+            <solid android:color="@color/bg_white"/>
+        </shape>
+    </item>
+    <item android:state_checked="false">
+        <shape>
+            <size android:height="10dp" android:width="10dp"/>
+            <corners android:radius="5dp"/>
+            <solid android:color="@color/font_gray"/>
+        </shape>
+    </item>
 </selector>
