--- a/main/src/main/res/layout/discovery_list_item.xml
+++ b/main/src/main/res/layout/discovery_list_item.xml
@@ -1,6 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/item_title_text"
+            android:layout_width="wrap_content"
+            android:text="让你单曲循环的华语歌"
+            android:layout_centerVertical="true"
+            android:textColor="@color/font_black"
+            android:layout_marginStart="10dp"
+            android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:gravity="center"
+            android:layout_marginEnd="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:background="@drawable/radius_rectangle"
+            android:layout_height="24dp">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:src="@drawable/ic_play"
+                android:id="@+id/action_view"
+                android:layout_marginRight="3dp"
+                android:layout_marginStart="5dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:textSize="11sp"
+                android:id="@+id/action_text"
+                android:text="播放全部"
+                android:textColor="@color/font_black"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </RelativeLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:id="@+id/recommend_list_view"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
+</layout>
