--- a/main/src/main/res/layout/discovery_top_item.xml
+++ b/main/src/main/res/layout/discovery_top_item.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="130dp">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         app:cardCornerRadius="5dp"
