--- a/main/src/main/res/layout/song_list_sub_item.xml
+++ b/main/src/main/res/layout/song_list_sub_item.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_margin="8dp"
+    android:orientation="vertical" android:layout_width="100dp"
+    android:layout_height="150dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/list_cover_card"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        app:cardCornerRadius="5dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
-        <ImageView
-            android:layout_width="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/my_love_default_background"
-            android:id="@+id/list_cover_view"
-            android:layout_height="match_parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.00999999">
+
+                <ImageView
+                    android:id="@+id/list_cover_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop" />
     </androidx.cardview.widget.CardView>
 
     <TextView
@@ -26,8 +31,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:maxLines="2"
         android:textColor="@color/font_gray"
         android:textSize="12sp"
+        android:text="title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/list_cover_card"
         app:layout_constraintStart_toStartOf="@+id/list_cover_card"
@@ -50,3 +57,4 @@
         app:layout_constraintTop_toTopOf="@+id/list_cover_card"
         app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
