--- a/main/src/main/res/values/color.xml
+++ b/main/src/main/res/values/color.xml
@@ -1,2 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <color name="bg_red">#DF2626</color>
+</resources>
