--- a/songlist/src/main/res/layout/item_all_song_list.xml
+++ b/songlist/src/main/res/layout/item_all_song_list.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
-    android:layout_marginEnd="8dp">
+    android:layout_marginEnd="8dp"
+    android:layout_marginBottom="4dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview_all_song_list_item"
@@ -28,6 +29,12 @@
             android:background="#000000"
             android:scaleType="centerCrop" />
 
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@drawable/shape_card_view_shade" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,6 +55,8 @@
                 android:text="294万"
                 android:textColor="@color/white"
                 android:textSize="@dimen/textSizeSmall" />
+
+
         </LinearLayout>
 
 
